fix color of list items in dark mode

--- a/views/mastodon.css
+++ b/views/mastodon.css
@@ -223,7 +223,7 @@ header > details ul {
 		color: #fff;
 	}
 
-	details p {
+	details p, details ul {
 		color: #fff;
 	}
 
